feat: damiano cc3 + MUNI thumbs

--- a/index.html
+++ b/index.html
@@ -72,6 +72,36 @@
                   </div>
                 </div>
 
+                <li>🎮 Damiano David, frontman of the rock band Måneskin, 3D Model created using Character Creator 3.
+                  This model is still a work in progress, especially hairs need some polishing</li>
+
+                <div class="grid-container" style="columns: 3 100px;">
+                  <div>
+                    <img class='grid-item' onclick="openModal(this)"
+                      src='./assets/thumbs/DamianoManeskin/DamianoManeskin_01_3DModel_Front_thumb.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' onclick="openModal(this)"
+                      src='./assets/thumbs/DamianoManeskin/DamianoManeskin_01_3DModel_Side_thumb.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' onclick="openModal(this)"
+                      src='./assets/thumbs/DamianoManeskin/DamianoManeskin_01_3DModel_TwoThirds_thumb.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' onclick="openModal(this)"
+                      src='./assets/thumbs/DamianoManeskin/DamianoManeskin_02_3DModel_TwoThirds2_thumb.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' onclick="openModal(this)"
+                      src='./assets/thumbs/DamianoManeskin/DamianoManeskin_02_3DModel_TwoThirds_thumb.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' onclick="openModal(this)"
+                      src='./assets/thumbs/DamianoManeskin/DamianoManeskin_03_3DModel_thumb.png' alt=''>
+                  </div>
+                </div>
+
               </ul>
             </section>
 
@@ -130,12 +160,7 @@
               <h4>April</h4>
               <ul>
                 <li>🎮 New clothing creation pipeline for my game SCP|Nemesi, involving Marvelous Designer</li>
-              </ul>
-            </section>
 
-            <section>
-              <h4>March</h4>
-              <ul>
                 <li>🎮 Replaced the old characters for my game SCP|Nemesi with new ones I made using
                   Character Creator 3. Clothes created using Marvelous Designer</li>
 
@@ -181,7 +206,7 @@
               <h4>February</h4>
               <ul>
                 <li>🎮 Completed the first map for my game SCP|Nemesi that will be available in the final game. This map
-                  is set in a 1960s-1970s police station, and it's inpired by Resident Evil 2. It features 4 roles as of
+                  is set in a 1960s-1970s police station, inpired by Resident Evil 2. It features 4 roles as of
                   now: a detective, a janitor, a convicted and a reporter</li>
 
                 <div class="grid-container" style="columns: 3 100px;">
@@ -482,64 +507,64 @@
                 <div class="grid-container" style="columns: 2 100px;">
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/192.168.1.111_4200_anima(iPhone X).png'
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_anima(iPhone X)_thumb.png'
                       alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/192.168.1.111_4200_home(iPhone X) (1).png'
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_home(iPhone X) (1)_thumb.png'
                       alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/192.168.1.111_4200_soul(iPhone X) (8).png'
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_soul(iPhone X) (8)_thumb.png'
                       alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/192.168.1.111_4200_soul(mi9 lite) (1).png'
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_soul(mi9 lite) (1)_thumb.png'
                       alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
                       onclick="openModal(this)"
-                      src='./assets/images/MUNI/192.168.1.111_4200_soul_0n9prqzemtmwcr62pumta6izz(mi9 lite).png' alt=''>
+                      src='./assets/thumbs/MUNI/192.168.1.111_4200_soul_0n9prqzemtmwcr62pumta6izz(mi9 lite)_thumb.png' alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/192.168.1.111_4200_soul_elcmish(mi9 lite).png'
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_soul_elcmish(mi9 lite)_thumb.png'
                       alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/192.168.1.111_4200_vibes(mi9 lite) (5).png'
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_vibes(mi9 lite) (5)_thumb.png'
                       alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/192.168.1.111_4200_vibestest(mi9 lite).png'
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_vibestest(mi9 lite)_thumb.png'
                       alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/44.235.69.217_soul(mi9 lite) (1).png' alt=''>
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_soul(mi9 lite) (1)_thumb.png' alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/44.235.69.217_soul(mi9 lite) (11).png' alt=''>
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_soul(mi9 lite) (11)_thumb.png' alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/44.235.69.217_soul(mi9 lite).png' alt=''>
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_soul(mi9 lite)_thumb.png' alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
                       onclick="openModal(this)"
-                      src='./assets/images/MUNI/192.168.1.111_4200_vibestest(mi9 lite) (1).png' alt=''>
+                      src='./assets/thumbs/MUNI/192.168.1.111_4200_vibestest(mi9 lite) (1)_thumb.png' alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/images/MUNI/44.235.69.217_vibes(mi9 lite).png' alt=''>
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_vibes(mi9 lite)_thumb.png' alt=''>
                   </div>
 
                 </div>
