feat: zoom on hover for desktop

--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
             <section>
               <h4>March</h4>
               <ul>
-                <li>🎵 Uploaded a <a href="https://youtu.be/56mJiTa85lo"><i>Madeon - Beings Orchestral Remix</i></a> I
+                <li>🎵 Uploaded a <a href="https://youtu.be/56mJiTa85lo">Madeon - Beings Orchestral Remix</a> I
                   made on my YouTube channel</li>
                 <!-- 
                 <div class="grid-container" style="columns: 1 100px;">
