--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
 
                 <li>🎮 Damiano David, frontman of the rock band Måneskin, 3D Model created using Character Creator 3.
-                  This model is still a work in progress, especially hairs need some polishing</li>
+                  This model is still a work in progress, especially the hairs still need some polishing</li>
 
                 <div class="grid-container" style="columns: 3 100px;">
                   <div>
