feat: correct LaS date

--- a/index.html
+++ b/index.html
@@ -512,50 +512,54 @@
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_home(iPhone X) (1)_thumb.png'
-                      alt=''>
+                      onclick="openModal(this)"
+                      src='./assets/thumbs/MUNI/192.168.1.111_4200_home(iPhone X) (1)_thumb.png' alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_soul(iPhone X) (8)_thumb.png'
-                      alt=''>
+                      onclick="openModal(this)"
+                      src='./assets/thumbs/MUNI/192.168.1.111_4200_soul(iPhone X) (8)_thumb.png' alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_soul(mi9 lite) (1)_thumb.png'
+                      onclick="openModal(this)"
+                      src='./assets/thumbs/MUNI/192.168.1.111_4200_soul(mi9 lite) (1)_thumb.png' alt=''>
+                  </div>
+                  <div>
+                    <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
+                      onclick="openModal(this)"
+                      src='./assets/thumbs/MUNI/192.168.1.111_4200_soul_0n9prqzemtmwcr62pumta6izz(mi9 lite)_thumb.png'
                       alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
                       onclick="openModal(this)"
-                      src='./assets/thumbs/MUNI/192.168.1.111_4200_soul_0n9prqzemtmwcr62pumta6izz(mi9 lite)_thumb.png' alt=''>
+                      src='./assets/thumbs/MUNI/192.168.1.111_4200_soul_elcmish(mi9 lite)_thumb.png' alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_soul_elcmish(mi9 lite)_thumb.png'
+                      onclick="openModal(this)"
+                      src='./assets/thumbs/MUNI/192.168.1.111_4200_vibes(mi9 lite) (5)_thumb.png' alt=''>
+                  </div>
+                  <div>
+                    <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
+                      onclick="openModal(this)"
+                      src='./assets/thumbs/MUNI/192.168.1.111_4200_vibestest(mi9 lite)_thumb.png' alt=''>
+                  </div>
+                  <div>
+                    <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_soul(mi9 lite) (1)_thumb.png'
                       alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_vibes(mi9 lite) (5)_thumb.png'
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_soul(mi9 lite) (11)_thumb.png'
                       alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/thumbs/MUNI/192.168.1.111_4200_vibestest(mi9 lite)_thumb.png'
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_soul(mi9 lite)_thumb.png'
                       alt=''>
-                  </div>
-                  <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_soul(mi9 lite) (1)_thumb.png' alt=''>
-                  </div>
-                  <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_soul(mi9 lite) (11)_thumb.png' alt=''>
-                  </div>
-                  <div>
-                    <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_soul(mi9 lite)_thumb.png' alt=''>
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
@@ -564,7 +568,8 @@
                   </div>
                   <div>
                     <img loading="lazy" class="easeload" onload="this.style.opacity=1" class='grid-item'
-                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_vibes(mi9 lite)_thumb.png' alt=''>
+                      onclick="openModal(this)" src='./assets/thumbs/MUNI/44.235.69.217_vibes(mi9 lite)_thumb.png'
+                      alt=''>
                   </div>
 
                 </div>
@@ -1007,19 +1012,6 @@
               </ul>
             </section>
 
-            <section>
-              <h4>January</h4>
-              <ul>
-                <li>🎮 Developed a PSP homebrew game called <i>Lights and Shadow</i>. It was a top-down 2D RPG game
-                  inspired by the old Zelda games and by The Elder Scrolls V: Skyrim.
-                  The game was coded in Lua and run inside Lua Player, a lua script player for the Sony PSP. The
-                  games used a custom game engine written by me. Because at the time I didn't have access to a PC to
-                  develop the game, all the coding, graphics and sound effects were made directly using the PSP, thanks
-                  to various homebrewes.
-                </li>
-              </ul>
-            </section>
-
           </section>
 
           <section class="year">
@@ -1194,6 +1186,23 @@
           </section>
 
 
+          <section class="year">
+            <h3>2012</h3>
+
+            <section>
+              <h4>September</h4>
+              <ul>
+                <li>🎮 Developed a PSP homebrew game called <i>Lights and Shadow</i>. It was a top-down 2D RPG game
+                  inspired by the old Zelda games and by The Elder Scrolls V: Skyrim.
+                  The game was coded in Lua and run inside Lua Player, a lua script player for the Sony PSP. The
+                  games used a custom game engine written by me. Because at the time I didn't have access to a PC to
+                  develop the game, all the coding, graphics and sound effects were made directly using the PSP, thanks
+                  to various homebrewes.
+                </li>
+              </ul>
+            </section>
+
+          </section>
 
 
         </div>
