--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
 
           <section class="year">
             <h3>2023</h3>
+
+            <section>
+              <h4>April</h4>
+              <ul>
+                <li>🎮 Uploaded a gameplay showcase for my upcoming game SCP: Nemesi </li>
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div class="yt-container">
+                    <iframe src="https://www.youtube.com/embed/HYFa9UdBV20?autoplay=1" title="YouTube video player"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen class="yt-video"></iframe>
+                  </div>
+                </div>
+
+              </ul>
+            </section>
+
           </section>
 
           <section class="year">
