feat: better scp nemesi video description

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <section>
               <h4>April</h4>
               <ul>
-                <li>🎮 Uploaded a gameplay showcase for my upcoming game SCP: Nemesi </li>
+                <li>🎮 Uploaded a gameplay showcase for my upcoming game SCP: Nemesi. The video was made to pitch the game to some publishers, highlighting its core gameplay when playing as an SCP as well as a human. </li>
 
                 <div class="grid-container" style="columns: 1 100px;">
                   <div class="yt-container">
