--- a/index.html
+++ b/index.html
@@ -47,17 +47,31 @@
         <div>
 
           <section class="year">
+            <h3>2024</h3>
+          </section>
+
+          <section class="year">
             <h3>2023</h3>
+
+            <section>
+              <h4>June</h4>
+              <br>
+              <ul>
+                <li>🎮 Registered the domain of the game <a href="https://scpnemesi.com">SCP: Nemesi </a></li>
+              </ul>
+            </section>
 
             <section>
               <h4>April</h4>
               <ul>
-                <li>🎮 Uploaded a gameplay showcase for my upcoming game SCP: Nemesi. The video was made to pitch the game to some publishers, highlighting its core gameplay when playing as an SCP as well as a human. </li>
+                <li>🎮 Uploaded a gameplay showcase for my upcoming game SCP: Nemesi. The video was made to pitch the
+                  game to some publishers, highlighting its core gameplay when playing as an SCP as well as a human.
+                </li>
 
                 <div class="grid-container" style="columns: 1 100px;">
                   <div class="yt-container">
-                    <iframe src="https://www.youtube.com/embed/HYFa9UdBV20?autoplay=1" title="YouTube video player"
-                      frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/HYFa9UdBV20?mute=1&autoplay=1"
+                      title="YouTube video player" frameborder="0"
                       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                       allowfullscreen class="yt-video"></iframe>
                   </div>
