feat: new scp nemesi yt videos

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           d="M46.11 27.44c.636-4.257-2.606-6.546-7.04-8.073l1.44-5.768-3.512-.876-1.4 5.616c-.923-.23-1.87-.447-2.813-.662l1.41-5.653-3.51-.875-1.438 5.766c-.764-.174-1.514-.346-2.242-.527l.004-.02-4.843-1.208-.934 3.75s2.605.597 2.55.634c1.422.355 1.68 1.296 1.636 2.042l-1.64 6.57c.1.026.226.062.366.118l-.37-.092-2.297 9.205c-.175.43-.616 1.08-1.61.833.035.05-2.552-.637-2.552-.637l-1.743 4.02 4.57 1.138c.85.213 1.682.436 2.502.646l-1.453 5.834 3.507.875 1.44-5.773c.958.26 1.888.5 2.798.726l-1.434 5.745 3.51.875 1.454-5.823c5.987 1.133 10.49.676 12.384-4.74 1.527-4.36-.076-6.874-3.226-8.514 2.294-.53 4.022-2.038 4.483-5.155zm-8.023 11.25c-1.085 4.36-8.426 2.003-10.806 1.412l1.93-7.73c2.38.595 10.01 1.77 8.877 6.318zm1.086-11.312c-.99 3.966-7.1 1.95-9.082 1.457l1.75-7.01c1.98.494 8.364 1.416 7.333 5.553z" />
       </svg> -->
       <h1>Alfredo Bellani</h1>
-      <h2>A timeline that shows my portfolio, from the present day all the way to my early works.</h2>
+      <h2>A chronological representation of my portfolio, spanning from the current day to my earliest works.</h2>
     </div>
 
     <div class="item">
@@ -47,11 +47,75 @@
         <div>
 
           <section class="year">
+            <h3>2025</h3>
+
+
+          </section>
+
+          <section class="year">
             <h3>2024</h3>
+
+            <section>
+              <h4>February</h4>
+              <ul>
+                <li>🎮 Uploaded a new gameplay showcase for my released game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made with the
+                  intention of building anticipation for its early access release on Steam in October 2023.
+                </li>
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div class="yt-container">
+                    <iframe src="https://www.youtube.com/embed/BnfRlCHK9IU?mute=1&autoplay=1"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen class="yt-video"></iframe>
+                  </div>
+                </div>
+
+              </ul>
+            </section>
+
           </section>
 
           <section class="year">
             <h3>2023</h3>
+
+            <section>
+              <h4>September</h4>
+              <ul>
+                <li>🎮 Uploaded a new gameplay showcase for my released game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made with the
+                  intention of building anticipation for its early access release on Steam in October 2023.
+                </li>
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div class="yt-container">
+                    <iframe src="https://www.youtube.com/embed/DEn846FMZyY?mute=1&autoplay=1"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen class="yt-video"></iframe>
+                  </div>
+                </div>
+
+              </ul>
+            </section>
+
+            <section>
+              <h4>August</h4>
+              <ul>
+                <li>🎮 Uploaded a gameplay showcase for my released game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made with the
+                  intention of building anticipation for its early access release on Steam in October 2023.
+                </li>
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div class="yt-container">
+                    <iframe src="https://www.youtube.com/embed/Vylm5CpYHxM?mute=1&autoplay=1"
+                      title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen class="yt-video"></iframe>
+                  </div>
+                </div>
+
+              </ul>
+            </section>
 
             <section>
               <h4>June</h4>
@@ -64,7 +128,7 @@
             <section>
               <h4>April</h4>
               <ul>
-                <li>🎮 Uploaded a gameplay showcase for my upcoming game SCP: Nemesi. The video was made to pitch the
+                <li>🎮 Uploaded a gameplay showcase for my released game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made to pitch the
                   game to some publishers, highlighting its core gameplay when playing as an SCP as well as a human.
                 </li>
 
@@ -95,7 +159,7 @@
             <section>
               <h4>September</h4>
               <ul>
-                <li>🎮 Remade the 3D Model for SCP-173, used in my game SCP|Nemesi</li>
+                <li>🎮 Remade the 3D Model for SCP-173, used in my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a></li>
 
                 <div class="grid-container" style="columns: 1 100px;">
                   <div>
@@ -140,11 +204,11 @@
             <section>
               <h4>August</h4>
               <ul>
-                <li>🎮 SCP|Nemesi backend server development started. Tech stack used: JavaScript, NodeJS, Mongoose,
+                <li>🎮 <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> backend server development started. Tech stack used: JavaScript, NodeJS, Mongoose,
                   ExpressJS, MongoDB. Hosted for free on
                   the cloud using Vercel and MongoDB Atlas</li>
 
-                <li>🎮 New map for my game SCP|Nemesi. It's set in traditional japanese village, and features 4
+                <li>🎮 New map for my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. It's set in traditional japanese village, and features 4
                   characters: a farmer, a blacksmith, a fisherman and a samurai. I made the characters using Character
                   Creator 3, and sketched the clothing using ZBrush. These are not final and still need some work
                 </li>
@@ -191,9 +255,9 @@
             <section>
               <h4>April</h4>
               <ul>
-                <li>🎮 New clothing creation pipeline for my game SCP|Nemesi, involving Marvelous Designer</li>
+                <li>🎮 New clothing creation pipeline for my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>, involving Marvelous Designer</li>
 
-                <li>🎮 Replaced the old characters for my game SCP|Nemesi with new ones I made using
+                <li>🎮 Replaced the old characters for my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> with new ones I made using
                   Character Creator 3. Clothes created using Marvelous Designer</li>
 
                 <div class="grid-container" style="columns: 2 100px;">
@@ -237,7 +301,7 @@
             <section>
               <h4>February</h4>
               <ul>
-                <li>🎮 Completed the first map for my game SCP|Nemesi that will be available in the final game. This map
+                <li>🎮 Completed the first map for my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> that will be available in the final game. This map
                   is set in a 1960s-1970s police station, inpired by Resident Evil 2. It features 4 roles as of
                   now: a detective, a janitor, a convicted and a reporter</li>
 
@@ -407,7 +471,7 @@
 
                 </div>
 
-                <li>🎮 Final layout for the test map / facility of my game SCP|Nemesi</li>
+                <li>🎮 Final layout for the test map / facility of my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a></li>
 
                 <div class="grid-container" style="columns: 3 100px;">
                   <div>
@@ -441,7 +505,7 @@
                 </div>
 
                 <li>🎮 Imported SCP-106 (The Old Guy) and SCP-049 (The Plague Doctor) 3D models in my game
-                  SCP|Nemesi. They were modelled in ZBrush, textured in Substance Painter and rigged using Mixamo</li>
+                  <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. They were modelled in ZBrush, textured in Substance Painter and rigged using Mixamo</li>
 
                 <div class="grid-container" style="columns: 3 100px;">
                   <div>
@@ -710,7 +774,7 @@
             <section>
               <h4>August</h4>
               <ul>
-                <li>🎮 SCP|Nemesi development started. It's a multiplayer horror game based on the <a
+                <li>🎮 <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> development started. It's a multiplayer horror game based on the <a
                     href="https://scp-wiki.wikidot.com/">SCP lore </a>, made with Unreal Engine 4. I used ZBrush to make
                   the various 3D models</li>
 
@@ -1061,7 +1125,7 @@
               <h4>August</h4>
               <ul>
                 <li>🎮 ProjectNemesis development started. Multiplayer horror game made with Unreal Engine 4. This
-                  project would eventually be the foundation of another game, SCP|Nemesi, almost like a spiritual
+                  project would eventually be the foundation of another game, <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>, almost like a spiritual
                   successor</li>
 
                 <div class="grid-container" style="columns: 2 100px;">
