feat: project view

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       </svg> -->
       <h1>Alfredo Bellani</h1>
       <h2>A chronological representation of my portfolio, spanning from the current day to my earliest works.</h2>
+      <h2>You can also switch to <div class="switch" onclick="toggleTimeline()">project view.<div>
+      </h2>
     </div>
 
     <div class="item">
@@ -58,7 +60,9 @@
             <section>
               <h4>February</h4>
               <ul>
-                <li>🎮 Uploaded a new gameplay showcase for my released game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made with the
+                <li>🎮 Uploaded a new gameplay showcase for my released game <a
+                    href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made
+                  with the
                   intention of building anticipation for its early access release on Steam in October 2023.
                 </li>
 
@@ -82,7 +86,9 @@
             <section>
               <h4>September</h4>
               <ul>
-                <li>🎮 Uploaded a new gameplay showcase for my released game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made with the
+                <li>🎮 Uploaded a new gameplay showcase for my released game <a
+                    href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made
+                  with the
                   intention of building anticipation for its early access release on Steam in October 2023.
                 </li>
 
@@ -101,7 +107,9 @@
             <section>
               <h4>August</h4>
               <ul>
-                <li>🎮 Uploaded a gameplay showcase for my released game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made with the
+                <li>🎮 Uploaded a gameplay showcase for my released game <a
+                    href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made
+                  with the
                   intention of building anticipation for its early access release on Steam in October 2023.
                 </li>
 
@@ -128,7 +136,9 @@
             <section>
               <h4>April</h4>
               <ul>
-                <li>🎮 Uploaded a gameplay showcase for my released game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made to pitch the
+                <li>🎮 Uploaded a gameplay showcase for my released game <a
+                    href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. The video was made
+                  to pitch the
                   game to some publishers, highlighting its core gameplay when playing as an SCP as well as a human.
                 </li>
 
@@ -159,7 +169,8 @@
             <section>
               <h4>September</h4>
               <ul>
-                <li>🎮 Remade the 3D Model for SCP-173, used in my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a></li>
+                <li>🎮 Remade the 3D Model for SCP-173, used in my game <a
+                    href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a></li>
 
                 <div class="grid-container" style="columns: 1 100px;">
                   <div>
@@ -204,11 +215,13 @@
             <section>
               <h4>August</h4>
               <ul>
-                <li>🎮 <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> backend server development started. Tech stack used: JavaScript, NodeJS, Mongoose,
+                <li>🎮 <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> backend server
+                  development started. Tech stack used: JavaScript, NodeJS, Mongoose,
                   ExpressJS, MongoDB. Hosted for free on
                   the cloud using Vercel and MongoDB Atlas</li>
 
-                <li>🎮 New map for my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. It's set in traditional japanese village, and features 4
+                <li>🎮 New map for my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi
+                  </a>. It's set in traditional japanese village, and features 4
                   characters: a farmer, a blacksmith, a fisherman and a samurai. I made the characters using Character
                   Creator 3, and sketched the clothing using ZBrush. These are not final and still need some work
                 </li>
@@ -255,9 +268,13 @@
             <section>
               <h4>April</h4>
               <ul>
-                <li>🎮 New clothing creation pipeline for my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>, involving Marvelous Designer</li>
+                <li>🎮 New clothing creation pipeline for my game <a
+                    href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>, involving Marvelous
+                  Designer</li>
 
-                <li>🎮 Replaced the old characters for my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> with new ones I made using
+                <li>🎮 Replaced the old characters for my game <a
+                    href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> with new ones I made
+                  using
                   Character Creator 3. Clothes created using Marvelous Designer</li>
 
                 <div class="grid-container" style="columns: 2 100px;">
@@ -301,7 +318,9 @@
             <section>
               <h4>February</h4>
               <ul>
-                <li>🎮 Completed the first map for my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> that will be available in the final game. This map
+                <li>🎮 Completed the first map for my game <a
+                    href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> that will be
+                  available in the final game. This map
                   is set in a 1960s-1970s police station, inpired by Resident Evil 2. It features 4 roles as of
                   now: a detective, a janitor, a convicted and a reporter</li>
 
@@ -471,7 +490,8 @@
 
                 </div>
 
-                <li>🎮 Final layout for the test map / facility of my game <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a></li>
+                <li>🎮 Final layout for the test map / facility of my game <a
+                    href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a></li>
 
                 <div class="grid-container" style="columns: 3 100px;">
                   <div>
@@ -505,7 +525,9 @@
                 </div>
 
                 <li>🎮 Imported SCP-106 (The Old Guy) and SCP-049 (The Plague Doctor) 3D models in my game
-                  <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. They were modelled in ZBrush, textured in Substance Painter and rigged using Mixamo</li>
+                  <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>. They were modelled
+                  in ZBrush, textured in Substance Painter and rigged using Mixamo
+                </li>
 
                 <div class="grid-container" style="columns: 3 100px;">
                   <div>
@@ -774,8 +796,9 @@
             <section>
               <h4>August</h4>
               <ul>
-                <li>🎮 <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> development started. It's a multiplayer horror game based on the <a
-                    href="https://scp-wiki.wikidot.com/">SCP lore </a>, made with Unreal Engine 4. I used ZBrush to make
+                <li>🎮 <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a> development
+                  started. It's a multiplayer horror game based on the <a href="https://scp-wiki.wikidot.com/">SCP lore
+                  </a>, made with Unreal Engine 4. I used ZBrush to make
                   the various 3D models</li>
 
                 <div class="grid-container" style="columns: 2 100px;">
@@ -1125,7 +1148,9 @@
               <h4>August</h4>
               <ul>
                 <li>🎮 ProjectNemesis development started. Multiplayer horror game made with Unreal Engine 4. This
-                  project would eventually be the foundation of another game, <a href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>, almost like a spiritual
+                  project would eventually be the foundation of another game, <a
+                    href="https://store.steampowered.com/app/2532230/SCP_Nemesi/">SCP: Nemesi </a>, almost like a
+                  spiritual
                   successor</li>
 
                 <div class="grid-container" style="columns: 2 100px;">
@@ -1303,6 +1328,50 @@
 
         </div>
       </div>
+
+      <div id="projects">
+        <div>
+
+          <div class="project-row">
+            <div class="project-item">
+
+              <div class="grid-container" style="columns: 1 100px;">
+                <div class="yt-container">
+                  <iframe src="https://www.youtube.com/embed/BnfRlCHK9IU?mute=1&amp;autoplay=1"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen="" class="yt-video"></iframe>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="project-item">
+              <h3 class="project-name">SCP: Nemesi</h3>
+              <p class="project-date">August 2018 (Ongoing)</p>
+              <br>
+              <p class="project-description">SCP: Nemesi is a multiplayer survival horror game developed in Unreal
+                Engine 4, drawing inspiration from the renowned SCP (Secure, Contain, Protect) lore. In the game,
+                players have the option to embody an SCP entity or join forces as a group of humans. The
+                immersive maps are intricately designed, mirroring real-life locations across the globe and spanning
+                various historical eras. Human roles are tailored to each location, assigning them unique branching
+                tasks. </p>
+              <ul class="project-tools">
+                <li><img src="./assets/icons/software/icons8-unreal-engine.svg" alt="Unreal Engine 4"></li>
+                <li><img src="./assets/icons/software/zbrush-svgrepo-com.svg" alt="Zbrush 2021"></li>
+                <li><img src="./assets/icons/software/icons8-blender-48.png" alt="Blender"></li>
+                <li><img src="./assets/icons/software/substance-painter.svg" alt="Substance Painter"></li>
+                <li><img src="./assets/icons/software/character-creator-3.png" alt="Character Creator 3"></li>
+                <li><img src="./assets/icons/software/MD11-Icon-150x150@2x.png" alt="Marvelous Designer 11"></li>
+              </ul>
+            </div>
+
+          </div>
+
+          
+        </div>
+      </div>
+
     </div>
   </div>
 
